# CPP-AntsColony

./: .floo  .gitignore  CMakeLists.txt  ClassAntsProject.xml  Dockerfile  README.md  main.cpp
.github/workflows/: docker.yml
headers/: Ant.h  AntQueen.h  AntWarrior.h  Anthill.h  Food.h
lib/ant/: Ant.cpp  Ant.h
lib/ant_hill/: AntHill.cpp  AntHill.h
lib/ants/: AntState.h
lib/ants/ant/: Ant.cpp  Ant.h
lib/ants/ant_egg/: AntEgg.cpp  AntEgg.h
lib/ants/ant_queen/: AntQueen.cpp  AntQueen.h
lib/ants/ant_warrior/: AntWarrior.cpp  AntWarrior.h
lib/ants/ant_worker/: AntWorker.cpp  AntWorker.h
lib/ants/ant_young_queen/: AntYoungQueen.cpp  AntYoungQueen.h
lib/ants/living_ant/: LivingAnt.cpp  LivingAnt.h
lib/environment/: Environment.cpp  Environment.h
lib/food/: Food.cpp  Food.h
lib/game/: Game.cpp  Game.h
lib/obstacle/: Obstacle.h
lib/pheromone/: Pheromone.cpp  Pheromone.h
lib/square_box/: SquareBox.cpp  SquareBox.h
src/: Ant.cpp  Food.cpp
